--- a/conference-ticket-generator-main/index.html
+++ b/conference-ticket-generator-main/index.html
@@ -18,10 +18,24 @@
 
   <body>
     <div class="container">
+      <div class="decoration">
+        <div class="left-bottom">
+          <img
+            src="/conference-ticket-generator-main/public/assets/images/pattern-squiggly-line-bottom-desktop.svg"
+            alt=""
+          />
+        </div>
+        <div class="right-top">
+          <img
+            src="/conference-ticket-generator-main/public/assets/images/pattern-squiggly-line-top.svg"
+            alt=""
+          />
+        </div>
+      </div>
       <header>
         <div class="logo">
           <img
-          src="/conference-ticket-generator/conference-ticket-generator-main/public/assets/images/logo-full.svg"
+          src="/conference-ticket-generator-main/public/assets/images/logo-full.svg"
           alt="conf logo"
         </div>
       </header>
@@ -38,7 +52,7 @@
             <div class="upload-area">
               <div class="upload-icon">
                 <img
-                  src="/conference-ticket-generator/conference-ticket-generator-main/public/assets/images/icon-upload.svg"
+                  src="/conference-ticket-generator-main/public/assets/images/icon-upload.svg"
                   alt=""
                 />
               </div>
@@ -80,21 +94,5 @@
         </form>
       </main>
     </div>
-
-    <!-- Generated tickets starts -->
-
-    Congrats,
-    <!-- Full Name -->! Your ticket is ready. We've emailed your ticket to
-    <!-- Email Address -->
-    and will send updates in the run up to the event. Coding Conf Jan 31, 2025 /
-    Austin, TX
-
-    <!-- Generated tickets ends -->
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div> -->
   </body>
 </html>
